syntax = "proto3";

//everything will be generated in individual files
option java_multiple_files = true;
// specify the package we want to use for our generated Java classes
option java_package = "com.jiaobuchong.proto.errorservice";
option java_outer_classname = "ErrorServiceProto";


package errorservice;


message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message ErrorInfo {
  repeated string message = 1;
}

// The greeting service definition.
service ErrorService {
  // Sends a greeting
  rpc SayHello (HiRequest) returns (HiResponse);

  rpc customException(EchoRequest) returns (EchoResponse);

  rpc customUnwrapException(EchoRequest) returns (EchoResponse);

  rpc DetailErrorMessage(EchoRequest) returns (EchoResponse);
}

// The request message containing the user's name.
message HiRequest {
  string first_name = 1;
  string last_name = 2;
}

// The response message containing the greetings
message HiResponse {
  string message = 1;
}